@@ -1545,7 +1545,7 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
         table name or multiple times after another without any other
         characters in between.</dd>
 
-    <dt id="cfg_LeftFrameTableLevel">$cfg['LeftFrameTableLevel'] string</dt>
+    <dt id="cfg_NavigationTreeTableLevel">$cfg['NavigationTreeTableLevel'] string</dt>
     <dd>Defines how many sublevels should be displayed when splitting
         up tables by the above separator.</dd>
 
