@@ -206,7 +206,6 @@ $cfg_db['_validators'] = array(
     'Import/ldi_terminated' => array(array('validate_by_regex', '/^.$/')),
     'Import/skip_queries' => 'validate_non_negative_number',
     'InsertRows' => 'validate_positive_number',
-    'LeftFrameTableLevel' => 'validate_positive_number',
     'LeftRecentTable' => 'validate_non_negative_number',
     'LimitChars' => 'validate_positive_number',
     'LoginCookieValidity' => 'validate_positive_number',
@@ -217,6 +216,7 @@ $cfg_db['_validators'] = array(
     'MaxRows' => 'validate_positive_number',
     'MaxTableList' => 'validate_positive_number',
     'MemoryLimit' => array(array('validate_by_regex', '/^\d+(?:[kmg])?$/i')),
+    'NavigationTreeTableLevel' => 'validate_positive_number',
     'QueryHistoryMax' => 'validate_positive_number',
     'QueryWindowWidth' => 'validate_positive_number',
     'QueryWindowHeight' => 'validate_positive_number',
