@@ -275,7 +275,6 @@ $strConfigLeftDisplayServers_desc = __('Display server choice at the top of the 
 $strConfigLeftDisplayServers_name = __('Display servers selection');
 $strConfigLeftDisplayTableFilterMinimum_name = __('Minimum number of tables to display the table filter box');
 $strConfigLeftDisplayDatabaseFilterMinimum_name = __('Minimum number of databases to display the database filter box');
-$strConfigLeftFrameTableLevel_name = __('Maximum table tree depth');
 $strConfigLeftLogoLink_desc = __('URL where logo in the navigation frame will point to');
 $strConfigLeftLogoLink_name = __('Logo link URL');
 $strConfigLeftLogoLinkWindow_desc = __('Open the linked page in the main window ([kbd]main[/kbd]) or in a new one ([kbd]new[/kbd])');
@@ -318,6 +317,7 @@ $strConfigNavigationTreeDbSeparator_desc = __('String that separates databases i
 $strConfigNavigationTreeDbSeparator_name = __('Database tree separator');
 $strConfigNavigationTreeTableSeparator_desc = __('String that separates tables into different tree levels');
 $strConfigNavigationTreeTableSeparator_name = __('Table tree separator');
+$strConfigNavigationTreeTableLevel_name = __('Maximum table tree depth');
 $strConfigRowActionLinks_desc = __('These are Edit, Copy and Delete links');
 $strConfigRowActionLinks_name = __('Where to show the table row links');
 $strConfigNaturalOrder_desc = __('Use natural order for sorting table and database names');
