@@ -58,6 +58,7 @@ VerboseMultiSubmit, ReplaceHelpImg
 + Renamed configuration directive: LeftFrameDBTree => NavigationTreeEnableGrouping
 + Renamed configuration directive: LeftFrameDBSeparator => NavigationTreeDbSeparator
 + Renamed configuration directive: LeftFrameTableSeparator => NavigationTreeTableSeparator
++ Renamed configuration directive: LeftFrameTableLevel => NavigationTreeTableLevel
 
 3.5.4.0 (not yet released)
 - bug #3570212 [edit] uuid_short() is a no-arguments function
